--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ html {
     font-family: 'Playfair Display', serif;
     font-size: 10px;
     /*background-color: #00539F;*/
-    background-image: linear-gradient(to top right, #F3F6F2,#085D03);
+    /*background-image: linear-gradient(to top right, #F3F6F2,#085D03);*/
     height: 100%;
   }
 
